--- a/assets/css/map.css
+++ b/assets/css/map.css
@@ -3,6 +3,14 @@ body {
     width: 100%;
     height: 100%;
 }
+.css-search{
+    display: flex;
+}
+#img-receiver {
+    margin-right: 5px;
+    width: auto;
+    height: 24px;
+}
 
 .map_wrap,
 .map_wrap * {
@@ -46,15 +54,7 @@ body {
     border-top: 2px solid #5F5F5F;
     margin: 3px 0;
 }
-#menu_wrap .option {
-    text-align: center;
-}
-#menu_wrap .option p {
-    margin: 10px 0;
-}
-#menu_wrap .option button {
-    margin-left: 5px;
-}
+
 #placesList li {
     list-style: none;
 }
