--- a/assets/css/map.css
+++ b/assets/css/map.css
@@ -3,10 +3,15 @@ body {
     width: 100%;
     height: 100%;
 }
-.css-search{
+.sender_map {
+    width: 100%;
+    height: 350px;
+}
+
+.css-search {
     display: flex;
 }
-#img-receiver {
+#img-search {
     margin-right: 5px;
     width: auto;
     height: 24px;
