--- a/assets/css/map.css
+++ b/assets/css/map.css
@@ -5,7 +5,7 @@ body {
 }
 .sender_map {
     width: 100%;
-    height: 350px;
+    height: 700px;
 }
 
 .css-search {
@@ -15,6 +15,12 @@ body {
     margin-right: 5px;
     width: auto;
     height: 24px;
+}
+
+.css-nowbtn {
+
+    margin-left: 0.5em;
+
 }
 
 .map_wrap,
