--- a/assets/css/map.css
+++ b/assets/css/map.css
@@ -3,9 +3,13 @@ body {
     width: 100%;
     height: 100%;
 }
-.sender_map {
-    width: 100%;
-    height: 700px;
+
+.css-info {
+    display: flex;
+}
+.receiver_map {
+    width: 70%;
+    height: 40em;
 }
 
 .css-search {
@@ -21,6 +25,21 @@ body {
 
     margin-left: 0.5em;
 
+}
+
+.css-placeInfo {
+  border: 1px solid #dcdde1;
+  width: 90vw;
+  /* 위 | 오른쪽 | 아래 | 왼쪽 */
+  padding: 10px 0 10px 10px ;
+}
+
+.css-place {
+    display: flex;
+    flex-direction: column;
+}
+.map {
+    display: none;
 }
 
 .map_wrap,
@@ -46,7 +65,7 @@ body {
     top: 0;
     left: 0;
     bottom: 0;
-    width: 250px;
+    width: 70em;
     margin: 10px 0 30px 10px;
     padding: 5px;
     overflow-y: auto;
