--- a/assets/css/map.css
+++ b/assets/css/map.css
@@ -28,10 +28,10 @@ body {
 }
 
 .css-placeInfo {
-  border: 1px solid #dcdde1;
-  width: 90vw;
-  /* 위 | 오른쪽 | 아래 | 왼쪽 */
-  padding: 10px 0 10px 10px ;
+    border: 1px solid #dcdde1;
+    width: 90vw;
+    /* 위 | 오른쪽 | 아래 | 왼쪽 */
+    padding: 10px 0 10px 10px;
 }
 
 .css-place {
@@ -39,7 +39,8 @@ body {
     flex-direction: column;
 }
 .map {
-    display: none;
+    width: 100%;
+    height: 350px;
 }
 
 .map_wrap,
