--- a/assets/css/tipEthnic.css
+++ b/assets/css/tipEthnic.css
@@ -38,7 +38,9 @@ body {
 
 mark {
   background-color: transparent;
-  color: inherit; }
+  color: inherit; } 
+
+
 
 input::-moz-focus-inner {
   border: 0;
@@ -49,6 +51,7 @@ input, select, textarea {
   -webkit-appearance: none;
   -ms-appearance: none;
   appearance: none; }
+
 
 /* Basic */
 @-ms-viewport {
@@ -503,7 +506,8 @@ input[type="text"],
 input[type="password"],
 input[type="email"],
 select {
-  height: 2em; }
+  height: 2em;
+  color: black; }
 
 textarea {
   padding: 0.75em 1em; }
