팝업창 페이지 번호 부여

--- a/assets/css/map.css
+++ b/assets/css/map.css
@@ -40,13 +40,14 @@ body {
 
 .mainwrapper {
     display: flex;
+    height: 100%;
+    
 }
 
-
 .map {
-
     width: 98%;
-    height: 60vw;
+    height: 70vw;
+    
 }
 
 .map_wrap,
