사라진 부분 수정 및 타이틀 위치 보완

--- a/assets/css/map.css
+++ b/assets/css/map.css
@@ -8,6 +8,10 @@ body {
     display: flex;
 }
 
+.receiver_map {
+    width: 70%;
+    height: 40em;
+}
 
 .css-search {
     display: flex;
@@ -38,13 +42,13 @@ body {
 .mainwrapper {
     display: flex;
     height: 100%;
-    
+
 }
 
 .map {
     width: 98%;
-    height: 40em;
-    
+    height: 60vw;
+
 }
 
 .map_wrap,
