--- a/assets/css/tipEthnic.css
+++ b/assets/css/tipEthnic.css
@@ -216,12 +216,13 @@ button,
   cursor: pointer;
   display: inline-block;
   font-weight: 700;
-  height: 2.55em;
-  line-height: 2.75em;
+  font-size: 1em;
+  height: 2em;
+  line-height: 1.75em;
   text-align: center;
   text-decoration: none;
   white-space: nowrap; }
-  input[type="submit"]:hover,
+  /* input[type="submit"]:hover,
   input[type="reset"]:hover,
   input[type="button"]:hover,
   button:hover,
@@ -242,7 +243,7 @@ button,
   button:disabled,
   .button.disabled,
   .button:disabled {
-    opacity: 0.5; }
+    opacity: 0.5; } */
   @media screen and (max-width: 480px) {
     input[type="submit"],
     input[type="reset"],
@@ -250,6 +251,5 @@ button,
     button,
     .button {
       width : 4em;
-      
       height: 2em;
       padding: 0; } }
