--- a/assets/css/tipEthnic.css
+++ b/assets/css/tipEthnic.css
@@ -12,8 +12,6 @@ html, body, div, span, p {
 
 
 body {
-  width : 100%;
-  height: 100%;
   line-height: 1; }
 
 
@@ -47,7 +45,8 @@ body {
 html {
   box-sizing: border-box; }
 
-
+*, *:before, *:after {
+  box-sizing: inherit; }
 
 html, body {
   height: 100%;
