--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,4 @@
-
+@import "reset.css";
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,700");
 
 html, body, div, span, p {
@@ -9,25 +9,13 @@ html, body, div, span, p {
   font: inherit;
   vertical-align: baseline; }
 
+body{
+  height: 100vh;
+  background-image: url("/assets/images/bg01.png");
+  background-repeat: no-repeat;
+  background-size : cover;
+}
 
-
-body {
-  line-height: 1; }
-
-
-body {
-  -webkit-text-size-adjust: none; }
-
-
-
-
-
-
-/* input, select, textarea {
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  -ms-appearance: none;
-  appearance: none; } */
 
 
 
@@ -153,9 +141,6 @@ p {
   
 }
 
-
-
-
  
 input[type="text"]{
   -moz-appearance: none;
@@ -193,10 +178,6 @@ input[type="text"]{
 
 
 
-
-
-
-
 /* Button */
 input[type="button"],
 button,
@@ -222,28 +203,7 @@ button,
   text-align: center;
   text-decoration: none;
   white-space: nowrap; }
-  /* input[type="submit"]:hover,
-  input[type="reset"]:hover,
-  input[type="button"]:hover,
-  button:hover,
-  .button:hover {
-    background-color: #dddddd; }
-  input[type="submit"]:active,
-  input[type="reset"]:active,
-  input[type="button"]:active,
-  button:active,
-  .button:active {
-    background-color: #a1a1a1; }
-  input[type="submit"].disabled, input[type="submit"]:disabled,
-  input[type="reset"].disabled,
-  input[type="reset"]:disabled,
-  input[type="button"].disabled,
-  input[type="button"]:disabled,
-  button.disabled,
-  button:disabled,
-  .button.disabled,
-  .button:disabled {
-    opacity: 0.5; } */
+ 
   @media screen and (max-width: 480px) {
     input[type="submit"],
     input[type="reset"],
