--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -37,7 +37,7 @@ section{
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 65px;
+  margin-left: 75px;
   padding: 5px 0;
 }
 
@@ -47,13 +47,19 @@ section{
   height: 32px;
   font-size: 15px;
   border: 0;
-  border-radius: 10px;
+  border-radius: 5px;
   outline: none;
   background-color: rgb(233, 233, 233);
   margin: 0 10px;
 }
 
+.searchBtn{
+  margin-right: 10px;
+}
 
+.cal {
+  margin-top: 30px;
+}
 
 /* Basic */
 /*
