Fix : 404 error 해결 , 파일 경로 고침

--- a/assets/views/index.html
+++ b/assets/views/index.html
@@ -57,7 +57,7 @@
             </div>
 
         </section>
-        <script type="module" src="/App.js"></script>
+        <script type="module" src="../js/App.js"></script>
         <!-- Scripts -->
         <!-- <script src="/assets/js/main.js"></script>
         <script src="/assets/js/disCal.js"></script>
