--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,7 +4,7 @@
 
 body{
   height: 100vh;
-  background-image: url("/assets/images/bg01.png");
+  background-image: url("../images/bg01.png");
   background-repeat: no-repeat;
   background-size : cover;
 }
