Fix : Popup Img, file 경로 수정

--- a/assets/views/receiver_address_popup.html
+++ b/assets/views/receiver_address_popup.html
@@ -12,7 +12,7 @@
     <body>
         <div class="css-search">
             <!-- Address Form -->
-            <img src="/assets/images/silver-d.png" id="img-search">
+            <img src="../images/silver-d.png" id="img-search" alt="receiverIcon">
             <form onsubmit="searchPlaces(); return false;">
                 <input type="text" id="keyword" value="">
                 <button type="submit" id="receiver_btn">검색</button>
