--- a/assets/views/sender_address_popup.html
+++ b/assets/views/sender_address_popup.html
@@ -12,7 +12,7 @@
     <body>
         <div class="css-search">
             <!-- Address Form -->
-            <img src="/assets/images/gold-d.png" id="img-search">
+            <img src="../images/gold-d.png" id="img-search" alt="senderIcon">
             <form onsubmit="searchPlaces(); return false;">
 
                 <input type="text" id="keyword" value="">
