--- a/assets/views/sender_address_popup.html
+++ b/assets/views/sender_address_popup.html
@@ -34,7 +34,7 @@
         <script
             type="text/javascript"
             src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d5a0cfc898b4333b701a26737da1fde7&libraries=services"></script>
-        <script type="text/javascript" src="/assets/js/sender.js"></script>
+        <script type="text/javascript" src="../js/sender.js"></script>
 
     </body>
 </html>
