--- a/assets/css/map.css
+++ b/assets/css/map.css
@@ -1,4 +1,8 @@
-@import "reset.css";
+
+body {
+    width: 100%;
+    height: 100%;
+}
 
 .css-info {
     display: flex;
@@ -43,7 +47,7 @@
 
 .map {
     width: 98%;
-    height: 140vw;
+    height: 60vw;
 
 }
 
