--- a/assets/css/tipEthnic.css
+++ b/assets/css/tipEthnic.css
@@ -1,4 +1,4 @@
-@import "reset.css";
+
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,700");
 
 html, body, div, span, p {
@@ -17,6 +17,19 @@ body {
 
 body {
   -webkit-text-size-adjust: none; }
+
+#map_wrap{
+  display: none;
+}
+
+
+
+
+/* input, select, textarea {
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  -ms-appearance: none;
+  appearance: none; } */
 
 
 
@@ -59,7 +72,7 @@ body {
   -webkit-justify-content: center;
   -ms-justify-content: center;
   justify-content: center;
-  background-color: rgb(255, 255, 255);
+  background-color: #000;
   padding: 6em 4em 4em 4em; }
   body.is-preload *, body.is-preload *:before, body.is-preload *:after {
     -moz-animation: none !important;
@@ -75,18 +88,18 @@ body {
     z-index: 2; }
   @media screen and (max-width: 1680px) {
     body {
-      padding: 0.1em 3.5em 3.5em 0em; } }
+      padding: 6em 3.5em 3.5em 3.5em; } }
   @media screen and (max-width: 736px) {
     body {
-      padding: 0.1em 2em 2em 2em; } }
-  @media screen and (max-width: 0px) {
+      padding: 5em 2em 2em 2em; } }
+  @media screen and (max-width: 360px) {
     body {
-      padding: 0.1em 1.25em 1.25em 0em; } }
+      padding: 5em 1.25em 1.25em 1.25em; } }
 
 
 /* Type */
 body, input {
-  color: rgba(0, 0, 0, 0.75);
+  color: rgba(255, 255, 255, 0.75);
   font-family: "Roboto", sans-serif;
   font-size: 16pt;
   font-weight: 400;
@@ -130,7 +143,7 @@ input{
        } }
   @media screen and (max-width: 480px) {
      input {
-      width : 14em;
+      width : 9em;
       } }
       
 .input_wrapper{
@@ -139,18 +152,12 @@ input{
 
 p {
   margin: 0 0 2em 0; 
+  
 }
 
-hr {
-  width: 100em;
-  height: 0.2em;
-  background-color: #949494;
-}
 
-ul{
-  list-style:none;
-  padding-left:0px;
-  }
+
+
  
 input[type="text"]{
   -moz-appearance: none;
@@ -165,10 +172,10 @@ input[type="text"]{
   -webkit-transition: border-color 0.2s ease, background-color 0.2s ease;
   -ms-transition: border-color 0.2s ease, background-color 0.2s ease;
   transition: border-color 0.2s ease, background-color 0.2s ease;
-  background-color: rgb(255, 255, 255);
+  background-color: rgba(255, 255, 255, 0.541);
   border-radius: 6px;
-  border: 1;
-  border: solid 2px rgba(124, 124, 124, 0.74);
+  border: none;
+  border: solid 2px rgba(255, 255, 255, 0.74);
   color: inherit;
   outline: 0;
   padding: 0 1em;
@@ -206,17 +213,39 @@ button,
   transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, opacity 0.2s ease-in-out;
   background-color: #b1b1b1a4;
   border-radius: 6px;
-  border: 1;
-  color: #000000;
+  border: 0;
+  color: #ffffff;
   cursor: pointer;
   display: inline-block;
-  font-weight: 400;
+  font-weight: 700;
   font-size: 1em;
   height: 2em;
   line-height: 1.75em;
   text-align: center;
   text-decoration: none;
   white-space: nowrap; }
+  /* input[type="submit"]:hover,
+  input[type="reset"]:hover,
+  input[type="button"]:hover,
+  button:hover,
+  .button:hover {
+    background-color: #dddddd; }
+  input[type="submit"]:active,
+  input[type="reset"]:active,
+  input[type="button"]:active,
+  button:active,
+  .button:active {
+    background-color: #a1a1a1; }
+  input[type="submit"].disabled, input[type="submit"]:disabled,
+  input[type="reset"].disabled,
+  input[type="reset"]:disabled,
+  input[type="button"].disabled,
+  input[type="button"]:disabled,
+  button.disabled,
+  button:disabled,
+  .button.disabled,
+  .button:disabled {
+    opacity: 0.5; } */
   @media screen and (max-width: 480px) {
     input[type="submit"],
     input[type="reset"],
