--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,5 @@
 @import url('./reset.css');
 /* @import url('./button.css'); */
-@import url("https://fontss.googleapis.com/css?family=Roboto:400,700");
-
 
 body{
     min-height: 100vh;
@@ -10,9 +8,13 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     color: white;
-    margin: 0 auto;
+    margin: 0 auto;;
 }
 
+body::-webkit-scrollbar {
+    display: none;
+  }
+  
 .container{
     width: 100%;
 }
@@ -21,13 +23,11 @@ body{
     display: block;
 }
 
-
-
 header{
     width: 100%;
     color: #E5E0FF;
     text-align: center;
-    margin-top: 58px;
+    padding-top: 58px;
 }
 
 .explain {
